correção da imagens

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </section>
         <section id="list">
           <div class="list">
-            <img src="/assets/image1.png" alt="imagem de um ponto turístico">
+            <img src="assets/image1.png" alt="imagem de um ponto turístico">
 
             <h3>1. Templo Haedong Yonggungsa </h3>
             <p class="description">
@@ -68,7 +68,7 @@
           </div>
 
           <div class="list">
-            <img src="/assets/image2.png" alt="imagem de um ponto turístico">
+            <img src="assets/image2.png" alt="imagem de um ponto turístico">
 
             <h3>2. Templo Beomeo-sa </h3>
             <p class="description">
@@ -86,7 +86,7 @@
           </div>
 
           <div class="list">
-            <img src="/assets/image3.png" alt="imagem de um ponto turístico">
+            <img src="assets/image3.png" alt="imagem de um ponto turístico">
 
             <h3>3. Parque Yongdusan </h3>
             <p class="description">
@@ -117,7 +117,7 @@
     </main>
   </div>
   <footer>
-    Feito com <img src="./assets/Vector.svg" alt="imagem de um coração de cor escura"> pela Rocketseat
+    Feito com <img src="assets/Vector.svg" alt="imagem de um coração de cor escura"> pela Rocketseat
   </footer>
 </body>
 
